--- a/WEB-HTML.html
+++ b/WEB-HTML.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Latihan <HTML></HTML></title>
+    <title>Latihan<HTML></HTML></title>
 </head>
 <body>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
-    <h1></h1>
+    <h1>Latihan!</h1>
+    <hr>
     
+<!-- ol>li*5>a>br -->
+    <ol>
+        <li><a href="#list">List<br></a></li>
+        <li><a href="#hyperlink">Hyperlink<br></a></li>
+        <li><a href="#image">Image<br></a></li>
+        <li><a href="#table">Table<br></a></li>
+        <li><a href="#form">Form<br></a></li>
+    </ol>
 </body>
 </html>
+
