--- a/WEB-Home.html
+++ b/WEB-Home.html
@@ -8,12 +8,13 @@
 <body>
     <h1>Latihan!</h1>
     <hr>
-    <ol>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JAVASCRIPT</li>
-    </ol>
-
     
+<!--p>a:blank*3>br-->    
+    <p>
+        <a href="WEB-HTML.html" target="_blank" rel="noopener noreferrer">HTML<br></a>
+        <a href="WEB-CSS.html" target="_blank" rel="noopener noreferrer">CSS<br></a>
+        <a href="WEB-JAVASCRIPT.html" target="_blank" rel="noopener noreferrer">JAVASCRIPT<br></a>
+    </p>
 </body>
 </html>
+
