--- a/WEB-HTML.html
+++ b/WEB-HTML.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Latihan<HTML></HTML></title>
+    <title>Latihan HTML</title>
 </head>
 <body>
     <h1>Latihan!</h1>
     <hr>
-    
+
 <!-- ol>li*5>a>br -->
     <ol>
         <li><a href="#list">List<br></a></li>
