--- a/WEB-HTML.html
+++ b/WEB-HTML.html
@@ -17,6 +17,94 @@
         <li><a href="#table">Table<br></a></li>
         <li><a href="#form">Form<br></a></li>
     </ol>
+    <br>
+
+    <p id="list">1a. List ul</p>
+<!-- ul[type]>li*3>br -->
+
+    <p>Round</p>
+    <ul>
+        <li>Lorem Ipsum<br></li>
+        <li>Lorem Ipsum<br></li>
+        <li>Lorem Ipsum<br></li>
+    </ul>
+    <br>
+
+    <p>Square</p>
+    <ul type="square">
+        <li>Lorem Ipsum<br></li>
+        <li>Lorem Ipsum<br></li>
+        <li>Lorem Ipsum<br></li>
+    </ul>
+    <br>
+
+    <p>Circle</p>
+    <ul type="Circle">
+        <li>Lorem Ipsum<br></li>
+        <li>Lorem Ipsum<br></li>
+        <li>Lorem Ipsum<br></li>
+    </ul>
+    <br>
+
+    <p>1b. List ol</p>
+    <p>1</p>
+    <ol type="">
+        <li>Lorem Ipsum<br></li>
+        <li>Lorem Ipsum<br></li>
+        <li>Lorem Ipsum<br></li>
+    </ol>
+    <p>a</p>
+    <ol type="a">
+        <li>Lorem Ipsum<br></li>
+        <li>Lorem Ipsum<br></li>
+        <li>Lorem Ipsum<br></li>
+    </ol>
+    <p>i</p>
+    <ol type="i">
+        <li>Lorem Ipsum<br></li>
+        <li>Lorem Ipsum<br></li>
+        <li>Lorem Ipsum<br></li>
+    </ol>
+    <br>
+    
+    <p>1c. Definition List</p>
+    <dl>
+        <dt>
+            Term
+            <dd>Description</dd>
+        </dt>
+    </dl>
+    <dl>
+        <dt>
+            Term
+            <dd>Description</dd>
+        </dt>
+    </dl>
+    <dl>
+        <dt>
+            Term
+            <dd>Description</dd>
+        </dt>
+    </dl>
+    <br>
+    <br>
+
+    <p><strong>2. Hyperlink</strong></p>
+    <ol>
+        <li>
+            <a href="">Lorem<br></a>
+            <a href="">Lorem<br></a>
+            <a href="">Lorem<br></a>
+            <a href="">Lorem<br></a>
+            <a href="">Lorem<br></a>
+        </li>
+    </ol>
 </body>
 </html>
+
+
+
+
+
+
 
