--- a/WEB-HTML.html
+++ b/WEB-HTML.html
@@ -9,96 +9,92 @@
     <h1>Latihan!</h1>
     <hr>
 
-<!-- ol>li*5>a>br -->
-    <ol>
-        <li><a href="#list">List<br></a></li>
-        <li><a href="#hyperlink">Hyperlink<br></a></li>
-        <li><a href="#image">Image<br></a></li>
-        <li><a href="#table">Table<br></a></li>
-        <li><a href="#form">Form<br></a></li>
-    </ol>
+    <p>
+        <a href="#list">List<br></a>
+        <a href="#hyperlink">Hyperlink<br></a>
+        <a href="#image">Image<br></a>
+        <a href="#table">Table<br></a>
+        <a href="#form">Form<br></a>
+    </p>
     <br>
 
-    <p id="list">1a. List ul</p>
-<!-- ul[type]>li*3>br -->
-
-    <p>Round</p>
-    <ul>
-        <li>Lorem Ipsum<br></li>
-        <li>Lorem Ipsum<br></li>
-        <li>Lorem Ipsum<br></li>
-    </ul>
-    <br>
-
-    <p>Square</p>
-    <ul type="square">
-        <li>Lorem Ipsum<br></li>
-        <li>Lorem Ipsum<br></li>
-        <li>Lorem Ipsum<br></li>
-    </ul>
-    <br>
-
-    <p>Circle</p>
-    <ul type="Circle">
-        <li>Lorem Ipsum<br></li>
-        <li>Lorem Ipsum<br></li>
-        <li>Lorem Ipsum<br></li>
-    </ul>
+    <h1 id="list">List</h1>
+    <p>1.a List ul</p>
+    <p>
+        Round
+        <ul type="">
+            <li>Lorem Ipsum<br></li>
+            <li>Lorem Ipsum<br></li>
+            <li>Lorem Ipsum<br></li>
+        </ul>
+    </p>
+    <p>
+        Circle
+        <ul type="circle">
+            <li>Lorem Ipsum<br></li>
+            <li>Lorem Ipsum<br></li>
+            <li>Lorem Ipsum<br></li>
+        </ul>
+    </p>
+    <p>
+        Square
+        <ul type="square">
+            <li>Lorem Ipsum<br></li>
+            <li>Lorem Ipsum<br></li>
+            <li>Lorem Ipsum<br></li>
+        </ul>
+    </p>
     <br>
 
     <p>1b. List ol</p>
-    <p>1</p>
-    <ol type="">
-        <li>Lorem Ipsum<br></li>
-        <li>Lorem Ipsum<br></li>
-        <li>Lorem Ipsum<br></li>
-    </ol>
-    <p>a</p>
-    <ol type="a">
-        <li>Lorem Ipsum<br></li>
-        <li>Lorem Ipsum<br></li>
-        <li>Lorem Ipsum<br></li>
-    </ol>
-    <p>i</p>
-    <ol type="i">
-        <li>Lorem Ipsum<br></li>
-        <li>Lorem Ipsum<br></li>
-        <li>Lorem Ipsum<br></li>
-    </ol>
-    <br>
-    
-    <p>1c. Definition List</p>
-    <dl>
-        <dt>
-            Term
-            <dd>Description</dd>
-        </dt>
-    </dl>
-    <dl>
-        <dt>
-            Term
-            <dd>Description</dd>
-        </dt>
-    </dl>
-    <dl>
-        <dt>
-            Term
-            <dd>Description</dd>
-        </dt>
-    </dl>
-    <br>
+    <p>
+        Number
+        <ol type="">
+            <li>Lorem Ipsum<br></li>
+            <li>Lorem Ipsum<br></li>
+            <li>Lorem Ipsum<br></li>
+        </ol>
+    </p>
+    <p>
+        Alphabet
+        <ol type="a">
+            <li>Lorem Ipsum<br></li>
+            <li>Lorem Ipsum<br></li>
+            <li>Lorem Ipsum<br></li>
+        </ol>
+    </p>
+    <p>
+        Romawi
+        <ol type="i">
+            <li>Lorem Ipsum<br></li>
+            <li>Lorem Ipsum<br></li>
+            <li>Lorem Ipsum<br></li>
+        </ol>
+    </p>
     <br>
 
-    <p><strong>2. Hyperlink</strong></p>
-    <ol>
-        <li>
-            <a href="">Lorem<br></a>
-            <a href="">Lorem<br></a>
-            <a href="">Lorem<br></a>
-            <a href="">Lorem<br></a>
-            <a href="">Lorem<br></a>
-        </li>
-    </ol>
+    <p>1c. Define List</p>
+    <p>
+        dl ,dt, dd
+        <dl>
+            <dt>
+                Term
+                <dd>Description</dd>
+            </dt>
+        </dl>
+    </p>
+    <br>
+
+    <h1 id="hyperlink">Hyperlink</h1>
+    <p>
+        <a href="http://google.com" target="_blank" rel="noopener noreferrer">
+            KLIK DISINI<br>
+        </a>
+    </p>
+    <br>
+
+    <h1 id="image">Image</h1>
+    <a href="WEB-Home.html"><img src="hutri75.png" alt="WEB-Home" width="100px"></a>
 </body>
 </html>
 
